--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   get: ^4.7.2
   cached_network_image: ^3.4.1
   flutter_svg: ^2.2.2
+  shared_preferences: ^2.2.3
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
