--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   supabase_flutter: ^2.12.0
   flutter_dotenv: ^6.0.0
   flutter_native_splash: ^2.4.7
+  mobile_scanner: ^7.1.4
 
 dev_dependencies:
   flutter_test:
