--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,12 @@ dependencies:
   flutter_dotenv: ^6.0.0
   flutter_native_splash: ^2.4.7
   mobile_scanner: ^7.1.4
+  qr_flutter: ^4.1.0
+  screenshot: ^3.0.0
+  share_plus: ^12.0.1
+  path_provider: ^2.1.5
+  gal: ^2.3.2
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
